--- a/main.css
+++ b/main.css
@@ -261,3 +261,57 @@ select{
     text-align: end;
     padding: 0.2rem;
 }
+@media (max-width:1000px) {
+    .market-slogan {
+        margin: 1rem 0 0 0;
+        width: 90vw;
+        flex-direction: column-reverse;
+        font-size: 10px;
+      }
+      .search-bar {
+        width: 60vw;
+      }
+      .news-place {
+        flex-direction: column;
+        width: 100%;
+        gap: 1rem;
+      }
+      .single-news {
+        width: 98%;
+        height: auto;
+      }
+      .promotion {
+        display: flex;
+        flex-direction: column-reverse;
+      }
+      .promo-desc {
+        width: 100%;
+      }
+      .promo-img {
+        width: 99%;
+      }
+      .filter-div {
+        flex-wrap: wrap;
+      }
+      /*Table*/
+      .table-responsive {
+        width: 100%;
+        overflow-x: auto;
+    }
+    
+    table {
+        width: 98vw;
+        border-collapse: collapse;
+        overflow-x: scroll;
+    }
+    
+    th, td {
+        border: 1px solid #ddd;
+        padding: 8px;
+    }
+    
+    th {
+        background-color: #f2f2f2;
+        text-align: left;
+    }
+}
