--- a/main.css
+++ b/main.css
@@ -293,25 +293,7 @@ select{
       .filter-div {
         flex-wrap: wrap;
       }
-      /*Table*/
-      .table-responsive {
-        width: 100%;
-        overflow-x: auto;
-    }
-    
-    table {
-        width: 98vw;
-        border-collapse: collapse;
-        overflow-x: scroll;
-    }
-    
-    th, td {
-        border: 1px solid #ddd;
-        padding: 8px;
-    }
-    
-    th {
-        background-color: #f2f2f2;
-        text-align: left;
-    }
+      select {
+        width: 40%;
+      }
 }
