--- a/main.css
+++ b/main.css
@@ -285,6 +285,10 @@ select{
 }
 .detailsDiv{
     width: 68%;
+    height: 83vh;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+    padding: 0 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -332,4 +336,18 @@ select{
       .news-details div {
         font-size: 12px;
       }
+      .courseDetails{
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-end;
+        gap: 0.5rem;
+     }
+     .img-div{
+        width: 96%;
+        height: 33vh;
+     }
+     .detailsDiv{
+        width: 96%;
+        height: unset;
+     }
 }
